--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+  --brand-color: #059669;
+  --accent-color: #7dd3fc;
+  /* --accent-color: #facc15; */
+  /* --gray: #e2e8f0; */
+  --gray: #E0E7E5;
+  --black: #333;
+  --shadow: #CCD3D1;
+  /* --brand-color: #22c55e; */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,4 +16,175 @@
 
 body {
   line-height: 1;
+  height: 100vh;
+  font-family: Lato;
+}
+
+.container {
+  min-height: 100%;
+  display: grid;
+  grid-template-columns: 20% 1fr;
+  grid-template-rows: 130px 1fr;
+}
+
+.header {
+  color: var(--black);
+  padding: 1em 3em;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: -4px 5px .2rem var(--shadow);
+}
+
+.header .top {
+  display: grid;
+  grid-template-columns: 24px 1fr 24px 24px 150px;
+  gap: 2em;
+  align-items: center;
+  justify-content: start;
+}
+
+.header .bottom {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: 48px 1fr 1fr;
+  align-items: center;
+}
+
+.header .bottom .user-description {
+  display: flex;
+  flex-direction: column;
+  justify-self: start;
+}
+
+button {
+  width: 6em;
+  color: #FFF;
+  font-weight: 400;
+  border: none;
+  background-color: var(--brand-color);
+  padding: .5rem .8rem;
+  border-radius: 2rem;
+}
+
+.header .bottom .buttons {
+  display: flex;
+  gap: 1rem;
+  justify-self: end;
+}
+
+#username {
+  font-weight: 900;
+}
+
+#search-bar {
+  outline: none;
+  border: none;
+  width: 600px;
+  background-color: var(--gray);
+  padding: .5rem .8rem;
+  border-radius: 2rem;
+  font-weight: bold;
+  color: var(--black);
+}
+
+.sidebar {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  background-color: var(--brand-color);
+  box-shadow: 4px 0 .5rem var(--shadow);
+  color: #FFF;
+  font-weight: 900;
+  padding: 1.5em;
+}
+
+.dashboard-item:first-child {
+  padding-left: 0;
+  font-weight: 900;
+}
+
+.dashboard-item {
+  font-weight: 400;
+  padding-left: 24px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  transition: transform 200ms;
+}
+
+.dashboard-item.extra-gap {
+  margin-bottom: 3em;
+}
+
+.dashboard-item:hover {
+  transform: scale(1.01);
+}
+
+#dashboard {
+  font-size: 2rem;
+}
+
+.sidebar-subheading {
+  font-size: 1.5rem;
+}
+
+.article {
+  z-index: -1;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  background-color: var(--gray);
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: 5fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 2em 1em;
+}
+
+.label {
+  font-weight: 900;
+  color: var(--black);
+}
+
+.card-container {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: 18px repeat(3, 1fr);
+  /* padding: 1rem; */
+}
+
+.announcements,
+.trending {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18px 1fr;
+}
+
+#card-label {
+  grid-column: 1 / 3;
+}
+
+.card {
+  /* border: 2px solid green; */
+  background-color: #FFF;
+  border-radius: 6px;
+  border-left: 6px solid var(--accent-color);
+  box-shadow: 3px 3px 4px var(--shadow);
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: var(--black);
+}
+
+.card span {
+  font-weight: 900;
 }
